Fix parser constants and optional integration ownership